# librtmp

./: .gitignore  CMakeLists.txt
librtmp/: CMakeLists.txt
src/: rtmp.c  rtmp.h
